# ndpi-tiff

./: .gitignore  CMakeLists.txt  ChangeLog  configure  configure.ac  configure~
autom4te.cache/: output.1  output.2
cmake/: LibraryFeatures.cmake
contrib/addtiffo/: addtiffo.c  tif_overview.c  tif_ovrcache.c  tif_ovrcache.h
contrib/dbs/: tiff-bi.c  tiff-grayscale.c  tiff-palette.c  tiff-rgb.c
contrib/dbs/xtiff/: xtiff.c
contrib/mfs/: README  mfs_file.c
contrib/pds/: tif_imageiter.c  tif_pdsdirread.c  tif_pdsdirwrite.c
contrib/ras/: ras2tif.c  tif2ras.c
contrib/stream/: README  tiffstream.cpp
contrib/tags/: README  listtif.c  maketif.c  xtif_dir.c  xtiffio.h
contrib/win_dib/: Tiffile.cpp  tiff2dib.c
html/: addingtags.html  internals.html  libtiff.html  support.html  v3.4beta007.html  v3.4beta016.html  v3.4beta018.html  v3.4beta024.html  v3.4beta028.html  v3.4beta031.html  v3.4beta032.html  v3.4beta036.html  v3.5.2.html  v3.5.3.html  v3.5.5.html  v3.5.6-beta.html  v3.5.7.html  v3.6.0.html  v3.6.1.html  v3.7.0.html  v3.7.0alpha.html  v3.7.0beta.html  v3.7.0beta2.html  v3.7.1.html  v3.7.2.html  v3.7.3.html  v3.7.4.html  v3.8.0.html  v3.8.1.html  v3.8.2.html  v3.9.0beta.html  v3.9.1.html  v4.0.0.html  v4.0.10.html  v4.0.2.html  v4.0.3.html  v4.0.4.html  v4.0.4beta.html  v4.0.7.html  v4.0.8.html  (+2 more)
html/man/: CMakeLists.txt  Makefile.am  Makefile.in  TIFFClose.3tiff.html  TIFFError.3tiff.html  TIFFFieldDataType.3tiff.html  TIFFFieldName.3tiff.html  TIFFFieldPassCount.3tiff.html  TIFFFieldReadCount.3tiff.html  TIFFFieldTag.3tiff.html  TIFFFieldWriteCount.3tiff.html  TIFFFlush.3tiff.html  TIFFGetField.3tiff.html  TIFFOpen.3tiff.html  TIFFPrintDirectory.3tiff.html  TIFFRGBAImage.3tiff.html  TIFFReadDirectory.3tiff.html  TIFFReadEncodedStrip.3tiff.html  TIFFReadEncodedTile.3tiff.html  TIFFReadRGBAImage.3tiff.html  TIFFReadRGBAStrip.3tiff.html  TIFFReadRGBATile.3tiff.html  TIFFReadRawStrip.3tiff.html  TIFFReadRawTile.3tiff.html  TIFFReadScanline.3tiff.html  TIFFReadTile.3tiff.html  TIFFSetDirectory.3tiff.html  TIFFSetField.3tiff.html  TIFFWarning.3tiff.html  TIFFWriteDirectory.3tiff.html  TIFFWriteEncodedStrip.3tiff.html  TIFFWriteEncodedTile.3tiff.html  TIFFWriteRawStrip.3tiff.html  TIFFWriteRawTile.3tiff.html  TIFFWriteScanline.3tiff.html  TIFFWriteTile.3tiff.html  TIFFbuffer.3tiff.html  TIFFcodec.3tiff.html  TIFFcolor.3tiff.html  TIFFmemory.3tiff.html  (+9 more)
libtiff/: libtiff.def  t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jbig.c  tif_jpeg.c  tif_jpeg_12.c  tif_lerc.c  tif_luv.c  tif_lzma.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_print.c  tif_read.c  tif_stream.cxx  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_unix.c  (+8 more)
man/: CMakeLists.txt  Makefile.am  Makefile.in  TIFFClose.3tiff  TIFFError.3tiff  TIFFFieldDataType.3tiff  TIFFFieldName.3tiff  TIFFFieldPassCount.3tiff  TIFFFieldReadCount.3tiff  TIFFFieldTag.3tiff  TIFFFieldWriteCount.3tiff  TIFFFlush.3tiff  TIFFGetField.3tiff  TIFFOpen.3tiff  TIFFPrintDirectory.3tiff  TIFFRGBAImage.3tiff  TIFFReadDirectory.3tiff  TIFFReadEncodedStrip.3tiff  TIFFReadEncodedTile.3tiff  TIFFReadRGBAImage.3tiff  TIFFReadRGBAStrip.3tiff  TIFFReadRGBATile.3tiff  TIFFReadRawStrip.3tiff  TIFFReadRawTile.3tiff  TIFFReadScanline.3tiff  TIFFReadTile.3tiff  TIFFSetDirectory.3tiff  TIFFSetField.3tiff  TIFFWarning.3tiff  TIFFWriteDirectory.3tiff  TIFFWriteEncodedStrip.3tiff  TIFFWriteEncodedTile.3tiff  TIFFWriteRawStrip.3tiff  TIFFWriteRawTile.3tiff  TIFFWriteScanline.3tiff  TIFFWriteTile.3tiff  TIFFbuffer.3tiff  TIFFcodec.3tiff  TIFFcolor.3tiff  TIFFmemory.3tiff  (+8 more)
ndpi-tests/: test.cpp
test/: ascii_tag.c  check_tag.c  custom_dir.c  custom_dir_EXIF_231.c  defer_strile_loading.c  defer_strile_writing.c  long_tag.c  rational_precision2double.c  raw_decode.c  rewrite_tag.c  short_tag.c  strip.c
tools/: fax2ps.c  fax2tiff.c  ndpi2tiff.c  ndpisplit.c  pal2rgb.c  ppm2tiff.c  raw2tiff.c  rgb2ycbcr.c  thumbnail.c  tiff2bw.c  tiff2pdf.c  tiff2ps.c  tiff2rgba.c  tiffcmp.c  tiffcp.c  tiffcrop.c  tiffdither.c  tiffdump.c  tiffgt.c  tiffinfo.c  tiffmedian.c  tiffset.c  tiffsplit.c
